--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Смарт-Экспресс — официальный сайт</title>
+    <meta http-equiv='X-UA-Cсайт находится в разработке</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script src='js/jquery-3.6.0.min.js'></script>
